# deno_brotli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bench.ts  bench_deps.ts  brotli_test.ts  build.ts  deno.json  mod.ts  test.ts  test_deps.ts  types.ts  wasm.js
.github/workflows/: build.yml  checks.yml  ci.yml  depsbot.yml  main.yml
examples/: compress.ts  decompress.ts
plugin/: index.js
scripts/: _deps.ts  _util.ts  build.ts  clean.ts  fmt.ts  lint.ts
src/: lib.rs
