[package]
name = "deno_brotli"
description = "Brotli wasm module for deno"
repository = "https://github.com/denosaurs/deno_brotli"
license = "MIT"
version = "0.1.3"
authors = ["Elias SJögreen", "Divy Srivastava", "Filippo Rossi"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.64"
wee_alloc = { version = "0.4.5", optional = true }
brotli = "3.3.0"

[profile.release]
lto = true
opt-level = "z"

[features]
