[package]
name = "deno_brotli"
description = "Brotli wasm module for deno"
repository = "https://github.com/denosaurs/deno_brotli"
license = "MIT"
version = "0.1.5"
authors = ["Elias Sjögreen", "Divy Srivastava", "Filippo Rossi"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
brotli = "3.3.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[profile.release]
lto = true
