[package]
name = "deno_brotli"
description = "Brotli wasm module for deno"
repository = "https://github.com/denosaurs/deno_brotli"
license = "MIT"
version = "0.1.5"
authors = ["Elias Sjögreen", "Divy Srivastava", "Filippo Rossi"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
brotli = "3.3.4"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[profile.release.package."*"]
opt-level = 3
